# pyschism

./: pyproject.toml  setup.py
examples/Bctides/: gen_bctides.py
examples/Gr3/: gen_gr3_constant.py
examples/HYCOM/: gen_bnd.py
examples/Sflux/: gen_sflux_from_GFS.py  link_sflux.py
examples/tvd/: gen_tvd_prop.py
pyschism/: _version.py
pyschism/forcing/hycom/: hycom2schism.py
pyschism/forcing/nws/nws2/: gfs2.py
